# kernel

./: .bazelrc  .clang-format  .gitignore  .hgignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  ata.c  ata.h  bochs.rc  bootloader.s  compile_flags.txt  elf.h  fat32.c  fat32.h  gdt.s  idt.s  interrupt.h  interrupt_wrapper.s  io.h  kernel.c  lib.c  lib.h  linker-bazel.ld  linker.ld  loader.s  loader_64.s  makefile  memory.c  memory.h  message.c  message.h  multiboot.s  network.c  network.h  paging.s  pci.c  pci.h  print.c  (+11 more)
applications/: BUILD.bazel  main.s  test.c
bootdisk/: bochsrc.bxrc  setup
ping/: BUILD.bazel  ping.c
tmp/: BUILD.bazel  main.s
user/: BUILD.bazel  user.ld  user.s
